--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Assistant:wght@200;800&display=swap"
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
@@ -47,7 +47,9 @@
 			<h1 class="sectionTitle sectionTitleIntro">
 				Hi, I'm <strong>Amy Miller</strong>
 			</h1>
-			<p class="sectionSubtitle sectionSubtitleIntro">front-end dev</p>
+			<p class="sectionSubtitle sectionSubtitleIntro">
+				full-stack junior developer
+			</p>
 			<img
 				src="images/MainPic.png"
 				alt="a picture of Amy smiling"
@@ -61,32 +63,32 @@
 			<h2 class="sectionTitle sectionTitleServices">What I do</h2>
 			<div class="services">
 				<div class="service">
-					<h3>Design and Development</h3>
+					<h3>Front-End Design</h3>
 					<p>
-						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
-						non eligendi magnam quaerat, assumenda quibusdam quia eaque illo
-						placeat beatae saepe est molestiae accusamus illum odio, voluptatem
-						atque facilis reprehenderit!
+						A real passion for good design and love for beautiful things on the
+						internet with a keen eye for the finer details. Experience in Figma
+						and Miro. A love for SCSS, seamless colour palettes and work
+						confidently in both vanilla JS and React.
 					</p>
 				</div>
 				<!--/Service-->
 				<div class="service">
-					<h3>E-Commerce</h3>
+					<h3>Back-End Dev</h3>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore,
-						rem distinctio! Rerum eum dicta, mollitia doloremque quam fuga
-						tenetur ad iusto placeat qui nihil vel, omnis ipsum sequi cum!
-						Eveniet.
+						Creating back end functionality and API connectivity for small scale
+						applications. Experience using MySQL for personal projects and enjoy
+						using MongoDB. Confident using Node.js and enjoy the challenge of
+						problem solving.
 					</p>
 				</div>
 				<!--/Service-->
 				<div class="service">
-					<h3>Wordpress</h3>
+					<h3>Digital Marketing</h3>
 					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat esse
-						laborum nam modi animi, nemo pariatur facilis perferendis iste atque
-						veniam, est, saepe ab cupiditate iusto enim natus necessitatibus.
-						Hic.
+						8 years' experience working in Travel and Tourism as Head of
+						Marketing and Business Development for an SME. Google Certified with
+						solid experience in SEO, PPC, Social Media Campaigns, CRM,
+						Networking & Trade Shows.
 					</p>
 				</div>
 				<!--/Service-->
@@ -98,21 +100,16 @@
 		<!--About Me-->
 		<section class="aboutMe" id="about">
 			<h2 class="sectionTitle sectionTitleAbout">Who I am</h2>
-			<p class="sectionSubtitle sectionSubtitleAbout">
-				Full Stack Developer based in Edinburgh
-			</p>
+			<p class="sectionSubtitle sectionSubtitleAbout">Full Stack Developer</p>
 
 			<div class="aboutMeBody">
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat
-					iure explicabo aspernatur cupiditate corporis suscipit distinctio
-					laboriosam commodi ipsam voluptatem, voluptas a quae beatae officia
-					veritatis officiis praesentium saepe quam.
+					Enthusiastic developer with experience in Javascript, Node, React &
+					CSS frameworks
 				</p>
 				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ratione
-					qui laborum unde placeat nesciunt totam aut repudiandae, et provident
-					molestiae eos enim sint soluta a fuga nihil fugiat! Architecto.
+					Organised with a keen eye for good design; a lover of CSS & a hater of
+					poor layout and novelty fonts.
 				</p>
 			</div>
 			<img
@@ -125,7 +122,7 @@
 		<section class="myWork" id="work">
 			<h2 class="sectionTitle sectionTitleWork">My work</h2>
 			<p class="sectionSubtitle sectionSubtitleWork">
-				A selection of my range of work
+				Here are some of the projects I've completed:
 			</p>
 			<div class="portfolio">
 				<!--portfolio item 00-->
@@ -133,24 +130,12 @@
 					<img src="/images/homepage.png" alt="#" class="portfolioImage" />
 				</a>
 				<!--portfolio item 01-->
-				<a href="portfolioItem.html" class="portfolioItem">
+				<a href="learnRussell.html" class="portfolioItem">
 					<img src="/images/LTR.png" alt="#" class="portfolioImage" />
 				</a>
 				<!--portfolio item 02-->
 				<a href="#" class="portfolioItem">
 					<img src="images/etsyImg.png" alt="#" class="portfolioImage" />
-				</a>
-				<!--portfolio item 03-->
-				<a href="#" class="portfolioItem">
-					<img src="images/placeholder.png" alt="#" class="portfolioImage" />
-				</a>
-				<!--portfolio item 04-->
-				<a href="#" class="portfolioItem">
-					<img src="images/placeholder3.png" alt="#" class="portfolioImage" />
-				</a>
-				<!--portfolio item 05-->
-				<a href="#" class="portfolioItem">
-					<img src="images/placeholder2.png" alt="#" class="portfolioImage" />
 				</a>
 			</div>
 		</section>
