portfolio pages added

--- a/etsy.html
+++ b/etsy.html
@@ -48,32 +48,20 @@
 
 		<section class="intro">
 			<h1 class="sectionTitle sectionTitleIntro">
-				My<strong>Hackathon</strong>
+				My<strong>Homage Piece</strong>
 			</h1>
 			<p class="sectionSubtitle sectionSubtitleIntro">Completed in 6 hours</p>
-			<img src="images/LTR.png" alt="Hackathon logo" class="introImg" />
+			<img src="images/etsyImg.png" alt="Etsy logo" class="introImg" />
 		</section>
 
 		<div class="portfolioItemIndividual">
 			<p>
-				<strong
-					><a href="https://learn-to-read.netlify.app/">View Website</a></strong
-				>
+				In homage to the Etsy website, created a replica of their site using CSS
+				and HTML only.
 			</p>
-			<p>
-				As part of my time spent at The Jump Bootcamp, I took part in a
-				'hackathon' in a team of 5.
-			</p>
-			<img src="#" alt="" />
-			<p>
-				The brief was to create an app that encouraged children to read. As a
-				mother of a three-year-old, I took the brief and developed an app that
-				was based on audio and clear but simple visuals for children
-			</p>
-			<p>
-				<strong>Languages Used</strong>
-			</p>
-			<p>React, Redux, CSS, HTML</p>
+			<p><strong>Languages Used</strong></p>
+			<p>Vanilla CSS, HTML</p>
+			<img src="/images/etsyImg.png" alt="" />
 		</div>
 
 		<!--FOOTER-->
