--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			</p>
 			<div class="portfolio">
 				<!--portfolio item 00-->
-				<a href="#" class="portfolioItem">
+				<a href="timberTravel.html" class="portfolioItem">
 					<img src="/images/homepage.png" alt="#" class="portfolioImage" />
 				</a>
 				<!--portfolio item 01-->
@@ -134,7 +134,7 @@
 					<img src="/images/LTR.png" alt="#" class="portfolioImage" />
 				</a>
 				<!--portfolio item 02-->
-				<a href="#" class="portfolioItem">
+				<a href="etsy.html" class="portfolioItem">
 					<img src="images/etsyImg.png" alt="#" class="portfolioImage" />
 				</a>
 			</div>
