--- a/timberTravel.html
+++ b/timberTravel.html
@@ -48,32 +48,37 @@
 
 		<section class="intro">
 			<h1 class="sectionTitle sectionTitleIntro">
-				My<strong>Hackathon</strong>
+				My<strong>Travel App</strong>
 			</h1>
-			<p class="sectionSubtitle sectionSubtitleIntro">Completed in 6 hours</p>
-			<img src="images/LTR.png" alt="Hackathon logo" class="introImg" />
+			<p class="sectionSubtitle sectionSubtitleIntro">Real Life Travel App</p>
+			<img src="images/homepage.png" alt="homepage logo" class="introImg" />
 		</section>
 
 		<div class="portfolioItemIndividual">
 			<p>
 				<strong
-					><a href="https://learn-to-read.netlify.app/">View Website</a></strong
+					><a href="http://timbertours.co.uk/">View the Travel Site</a></strong
 				>
 			</p>
 			<p>
-				As part of my time spent at The Jump Bootcamp, I took part in a
-				'hackathon' in a team of 5.
+				I created this website to bridge the gap between purchase and service.
 			</p>
 			<img src="#" alt="" />
 			<p>
-				The brief was to create an app that encouraged children to read. As a
-				mother of a three-year-old, I took the brief and developed an app that
-				was based on audio and clear but simple visuals for children
+				In the Scottish Travel Industry there is a shortage of tech that
+				encourages customers to engage with the product they have purchased.
 			</p>
 			<p>
-				<strong>Languages Used</strong>
+				In order to encourage retention and social interaction, I made this app
+				to not only showcase the product they had purchased, provide a hub of
+				information, but also as a means to build anticipation before joining a
+				tour.
 			</p>
-			<p>React, Redux, CSS, HTML</p>
+			<p><strong>Languages Used:</strong></p>
+			<p>
+				A full stack application: MySQL, Node.js, React, SCSS, HTML, API
+				integration
+			</p>
 		</div>
 
 		<!--FOOTER-->
