--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
 		<!--About Me-->
 		<section class="aboutMe" id="about">
 			<h2 class="sectionTitle sectionTitleAbout">Who I am</h2>
-			<p class="sectionSubtitle sectionSubtitleAbout">Full Stack Developer</p>
+			<p class="sectionSubtitle sectionSubtitleAbout">
+				Full Stack Developer & Design Enthusiast
+			</p>
 
 			<div class="aboutMeBody">
 				<p>
