--- a/etsy.html
+++ b/etsy.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Amy Miller Portfolio Website</title>
+		<title>Amy Miller Portfolio: Etsy Homage</title>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -50,18 +50,20 @@
 			<h1 class="sectionTitle sectionTitleIntro">
 				My<strong>Homage Piece</strong>
 			</h1>
-			<p class="sectionSubtitle sectionSubtitleIntro">Completed in 6 hours</p>
+			<p class="sectionSubtitle sectionSubtitleIntro">An Etsy Clone</p>
 			<img src="images/etsyImg.png" alt="Etsy logo" class="introImg" />
 		</section>
 
 		<div class="portfolioItemIndividual">
 			<p>
-				In homage to the Etsy website, created a replica of their site using CSS
-				and HTML only.
+				As one of my first projects for The Jump Digital School, I chose to
+				stretch my design skills and challenge myself to recreate the Etsy
+				website using only vanilla CSS and HTML.
 			</p>
 			<p><strong>Languages Used</strong></p>
 			<p>Vanilla CSS, HTML</p>
-			<img src="/images/etsyImg.png" alt="" />
+			<p><strong>View</strong></p>
+			<img src="#" alt="" />
 		</div>
 
 		<!--FOOTER-->
