--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				full-stack junior developer
 			</p>
 			<img
-				src="images/MainPic.png"
+				src="images/AmyPortrait.jpg"
 				alt="a picture of Amy smiling"
 				class="introImg"
 			/>
@@ -106,12 +106,19 @@
 
 			<div class="aboutMeBody">
 				<p>
-					Enthusiastic developer with experience in Javascript, Node, React &
-					CSS frameworks
+					Enthusiastic developer with experience in <strong>Javascript</strong>,
+					<strong>Node.js</strong>, <strong>React</strong> &
+					<strong>CSS</strong> frameworks. Worked with API integration for
+					real-world projectsfor the Scottish Travel and Tourism Industry
 				</p>
 				<p>
-					Organised with a keen eye for good design; a lover of CSS & a hater of
-					poor layout and novelty fonts.
+					Confident using <strong>Adobe</strong> Packages,
+					<strong>Google Adwords, Analytics</strong> and mentoring teams.
+				</p>
+				<p>
+					After 10 years in Marketing for the Travel and Tourism Industry, now
+					looking for a challenging <strong>junior developer</strong> role based
+					in Scotland, Northern England or Remote.
 				</p>
 			</div>
 			<img
