--- a/learnRussell.html
+++ b/learnRussell.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Amy Miller Portfolio Website</title>
+		<title>Amy Miller Portfolio: Hackathon</title>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -50,7 +50,7 @@
 			<h1 class="sectionTitle sectionTitleIntro">
 				My<strong>Hackathon</strong>
 			</h1>
-			<p class="sectionSubtitle sectionSubtitleIntro">Completed in 6 hours</p>
+			<p class="sectionSubtitle sectionSubtitleIntro">Completed in 7 hours</p>
 			<img src="images/LTR.png" alt="Hackathon logo" class="introImg" />
 		</section>
 
@@ -62,13 +62,16 @@
 			</p>
 			<p>
 				As part of my time spent at The Jump Bootcamp, I took part in a
-				'hackathon' in a team of 5.
+				hackathon in a team of 5.
 			</p>
 			<img src="#" alt="" />
 			<p>
 				The brief was to create an app that encouraged children to read. As a
-				mother of a three-year-old, I took the brief and developed an app that
-				was based on audio and clear but simple visuals for children
+				mother of a three-year-old, I took the brief and helped to develop an
+				app that was based on audio and clear but simple visuals for children.
+			</p>
+			<p>
+				The project was challenging but rewarding working as part of a team.
 			</p>
 			<p>
 				<strong>Languages Used</strong>
