--- a/timberTravel.html
+++ b/timberTravel.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Amy Miller Portfolio Website</title>
+		<title>Amy Miller Portfolio: Travel App</title>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -50,29 +50,32 @@
 			<h1 class="sectionTitle sectionTitleIntro">
 				My<strong>Travel App</strong>
 			</h1>
-			<p class="sectionSubtitle sectionSubtitleIntro">Real Life Travel App</p>
+			<p class="sectionSubtitle sectionSubtitleIntro">
+				Real World B2C Travel Site
+			</p>
 			<img src="images/homepage.png" alt="homepage logo" class="introImg" />
 		</section>
 
 		<div class="portfolioItemIndividual">
 			<p>
 				<strong
-					><a href="http://timbertours.co.uk/">View the Travel Site</a></strong
+					><a href="http://timbertours.co.uk/" target="_blank"
+						>View the Travel Site</a
+					></strong
 				>
 			</p>
-			<p>
-				I created this website to bridge the gap between purchase and service.
-			</p>
-			<img src="#" alt="" />
 			<p>
 				In the Scottish Travel Industry there is a shortage of tech that
 				encourages customers to engage with the product they have purchased.
 			</p>
 			<p>
+				I created this website to bridge the gap between purchase and service.
+			</p>
+			<p>
 				In order to encourage retention and social interaction, I made this app
-				to not only showcase the product they had purchased, provide a hub of
-				information, but also as a means to build anticipation before joining a
-				tour.
+				to not only showcase the product they had purchased, but also as a means
+				to build anticipation before joining a tour and introduce a social
+				element.
 			</p>
 			<p><strong>Languages Used:</strong></p>
 			<p>
