--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						A real passion for good design and love for beautiful things on the
 						internet with a keen eye for the finer details. Experience in Figma
 						and Miro. A love for SCSS, seamless colour palettes and work
-						confidently in both vanilla JS and React.
+						confidently with both vanilla JS and React.
 					</p>
 				</div>
 				<!--/Service-->
@@ -85,7 +85,7 @@
 				<div class="service">
 					<h3>Digital Marketing</h3>
 					<p>
-						8 years' experience working in Travel and Tourism as Head of
+						10 years' experience working in Travel and Tourism as Head of
 						Marketing and Business Development for an SME. Google Certified with
 						solid experience in SEO, PPC, Social Media Campaigns, CRM,
 						Networking & Trade Shows.
