metatags and favicon

--- a/index.html
+++ b/index.html
@@ -21,6 +21,45 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
+		<!--Favicon-->
+		<link rel="icon" type="image/png" href="/favicon.ico" />
+		<!--Metatags-->
+		<!-- Primary Meta Tags -->
+		<title>Amy Miller - Full Stack Developer</title>
+		<meta name="title" content="Amy Miller - Full Stack Developer" />
+		<meta
+			name="description"
+			content="Actively seeking a full-stack developer role. From a marketing background, skills include Javascript, CSS, SCSS, Node.js and React"
+		/>
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://metatags.io/" />
+		<meta property="og:title" content="Amy Miller - Full Stack Developer" />
+		<meta
+			property="og:description"
+			content="Actively seeking a full-stack developer role. From a marketing background, skills include Javascript, CSS, SCSS, Node.js and React"
+		/>
+		<meta
+			property="og:image"
+			content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+		/>
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://metatags.io/" />
+		<meta
+			property="twitter:title"
+			content="Amy Miller - Full Stack Developer"
+		/>
+		<meta
+			property="twitter:description"
+			content="Actively seeking a full-stack developer role. From a marketing background, skills include Javascript, CSS, SCSS, Node.js and React"
+		/>
+		<meta
+			property="twitter:image"
+			content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+		/>
 	</head>
 	<body>
 		<header>
