--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Assistant:wght@200;800&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Assistant:wght@200;400;800&display=swap"
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
@@ -25,8 +25,6 @@
 		<link rel="icon" type="image/png" href="/favicon.ico" />
 		<!--Metatags-->
 		<!-- Primary Meta Tags -->
-		<title>Amy Miller - Full Stack Developer</title>
-		<meta name="title" content="Amy Miller - Full Stack Developer" />
 		<meta
 			name="description"
 			content="Actively seeking a full-stack developer role. From a marketing background, skills include Javascript, CSS, SCSS, Node.js and React"
@@ -50,11 +48,11 @@
 		<meta property="twitter:url" content="https://metatags.io/" />
 		<meta
 			property="twitter:title"
-			content="Amy Miller - Full Stack Developer"
+			content="Amy Miller - Junior Full Stack Developer"
 		/>
 		<meta
 			property="twitter:description"
-			content="Actively seeking a full-stack developer role. From a marketing background, skills include Javascript, CSS, SCSS, Node.js and React"
+			content="Actively seeking a junior full-stack developer role. From a marketing background, skills include Javascript, CSS, SCSS, Node.js and React"
 		/>
 		<meta
 			property="twitter:image"
@@ -140,7 +138,7 @@
 		<section class="aboutMe" id="about">
 			<h2 class="sectionTitle sectionTitleAbout">Who I am</h2>
 			<p class="sectionSubtitle sectionSubtitleAbout">
-				Full Stack Developer & Design Enthusiast
+				Junior Full Stack Developer & Design Enthusiast
 			</p>
 
 			<div class="aboutMeBody">
