small changes in text

--- a/index.html
+++ b/index.html
@@ -100,32 +100,32 @@
 			<h2 class="sectionTitle sectionTitleServices">What I do</h2>
 			<div class="services">
 				<div class="service">
-					<h3>Front-End Design</h3>
+					<h3>Front-End Dev</h3>
 					<p>
+						<strong>Javascript, React, SCSS, Vanilla CSS, Figma & Miro</strong>.
 						A real passion for good design and love for beautiful things on the
-						internet with a keen eye for the finer details. Experience in Figma
-						and Miro. A love for SCSS, seamless colour palettes and work
-						confidently with both vanilla JS and React.
+						internet. Experience in design with Figma and Miro. A love for SCSS,
+						and work confidently with both vanilla JS and React.
 					</p>
 				</div>
 				<!--/Service-->
 				<div class="service">
 					<h3>Back-End Dev</h3>
 					<p>
-						Creating back end functionality and API connectivity for small scale
-						applications. Experience using MySQL for personal projects and enjoy
-						using MongoDB. Confident using Node.js and enjoy the challenge of
-						problem solving.
+						<strong>Node.js, MySQL, MongoDB, API integration</strong>. Creating
+						back end functionality and API connectivity for small scale
+						applications. Experience using MySQL & MongoDB. Confident using
+						Node.js and enjoy the challenge of problem solving.
 					</p>
 				</div>
 				<!--/Service-->
 				<div class="service">
 					<h3>Digital Marketing</h3>
 					<p>
-						10 years' experience working in Travel and Tourism as Head of
-						Marketing and Business Development for an SME. Google Certified with
-						solid experience in SEO, PPC, Social Media Campaigns, CRM,
-						Networking & Trade Shows.
+						<strong>SEO, PPC, SEM, CRM</strong>. 10 years' experience working in
+						Travel and Tourism as Head of Marketing and Business Development for
+						an SME. Google Certified with experience in Social Media Campaigns,
+						CRM, Networking & Trade Shows.
 					</p>
 				</div>
 				<!--/Service-->
@@ -180,9 +180,6 @@
 					<img src="/images/LTR.png" alt="#" class="portfolioImage" />
 				</a>
 				<!--portfolio item 02-->
-				<a href="etsy.html" class="portfolioItem">
-					<img src="images/etsyImg.png" alt="#" class="portfolioImage" />
-				</a>
 			</div>
 		</section>
 		<!--FOOTER-->
