--- a/timberTravel.html
+++ b/timberTravel.html
@@ -77,6 +77,7 @@
 				to build anticipation before joining a tour and introduce a social
 				element.
 			</p>
+			<p><strong>Note:</strong> This is a real-life, ongoing project.</p>
 			<p><strong>Languages Used:</strong></p>
 			<p>
 				A full stack application: MySQL, Node.js, React, SCSS, HTML, API
